--- a/css/styles.css
+++ b/css/styles.css
@@ -1,61 +1,164 @@
-html{
-    scroll-behavior: smooth;
+:root{
+    --color-1:#2f3240;
 }
 
 body{
-    font-family:'Roboto', sans-serif;
-    margin: 0px;
-    color: #2d3038;
-    font-weight: 400;
+    font-family: sans-serif;
+    background-color: #e8eef3;
+}
+*{
+    box-sizing: border-box;
+    margin: 0;
     padding: 0;
-    scroll-behavior: smooth;
 }
-h1,h2,h3,h4,h5,h6{
-    font-weight: 700;
-    color: #2d3038;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-p{
-    font-size: 15px;
-    font-weight: 500;
-}
-p.intro{
-    margin: 12px 0 0;
-    line-height: 24px;
-}
-a, a:hover, a:focus{
-    text-decoration: none;
-    outline: none;
-    font-weight: 400;
-    font-size: 14px;
-}
-ul,ol{
-    padding: 0px;
-    margin:0px;
+ul{
     list-style: none;
 }
-/*=============================================
-                header--section
-            ========================*/
-    .header-section{
-        background-color: #292929;
-        width: 100%;
-        z-index: 888;
-    }
-    .logo img{
-        width:70px;
-    }
-    .navbar-nav> li> a{
+a{
+    text-decoration: none;
+}
+.container{
+    max-width: 1170px;
+    margin: auto;
+}
+.row{
+    display: flex;
+    flex-wrap: wrap;
+}
+.align-items-center{
+    align-items: center;
+}
+.justify-content-between{
+    justify-content: space-between;
+}
+/*header*/
+.header{
+    background-color: var(--color-1);
+    padding: 12px 0;
+    line-height: 1.5;
+}
+.logo img{
+    width: 90px;
+}
+.header .logo,
+.header .nav{
+    padding: 0 15px;
+}
+.header .logo{
+    font-size: 30px;
+    color: #ffffff;
+    text-transform: capitalize;
+}
+.header .nav ul li{
+    display: inline-block;
+    color: #ffffff;
+    margin-left: 40px;
+}
+.header .nav ul li a{
+    display: block;
+    cursor: pointer;
+    font-size: 16px;
+    text-transform: capitalize;
+    color: #ffffff;
+    padding: 10px 0;
+    transition: all 0.5s ease;
+}
+.header .nav ul li a.active,
+.header nav ul li a:hover{
+    color: #f3a93d;
+}
+.nav-toggler{
+    height: 34px;
+    width: 44px;
+    background-color: #ffffff;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+    display: none;
+    margin-right: 15px;
+}
+.nav-toggler:focus{
+    outline: none;
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
+}
+.nav-toggler span{
+    height: 2px;
+    width: 20px;
+    background-color: var(--color-1);
+    display: block;
+    margin: auto;
+    position: relative;
+    transition: all 0.3s ease;
+}
+.nav-toggler span::before,
+.nav-toggler span::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-1);
+    transition: all 0.3s ease;
+}
+,.nav-toggler.active span{
+    background-color: transparent;
+}
+.nav-toggler span::before{
+    transform: translateY(-6px);
+}
+.nav-toggler.active span::before{
+    transform: rotate(45deg);
+}
+.nav-toggler span::after{
+    transform: translateY(6px);
+}
+.nav-toggler.active span::after{
+    transform: rotate(135deg);
+}
+
+@media(max-width:991px){
+    .nav-toggler{
         display: block;
-        color: white;
-        position: relative;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-        font-size: 13px;
     }
-
-
-/*=============================================
-                header--section
-            ========================*/
+    .header .nav{
+        width: 100%;
+        padding: 0;
+        max-height: 0px;
+        overflow: hidden; 
+        visibility: hidden;
+        transition: all 0.5s ease;
+    }
+    .header .nav.open{
+        visibility: visible;
+    }
+    .header .nav ul{
+        padding: 12px 15px 0;
+        margin-top: 12px;
+        border-top: 1px solid rgba(255, 255, 255, 0.2);
+    }
+    .header .nav ul li{
+        display: block;
+        margin: 0;
+    }
+}
+/*
+.carousel-img{
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    height: 100vh;
+}
+.image1{
+    background: url(.images/slides/img1.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.image2{
+    background: url(.images/slides/img2.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+*/
